fix: Fix Page Metadata on Mobilegit

--- a/src/themes/rootTheme.css
+++ b/src/themes/rootTheme.css
@@ -6,8 +6,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");
 
 /* @import url('https://fonts.googleapis.com/css?family=Bai+Jamjuree:300,400,500,600&display=swap'); */
-
-@import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@600&display=swap'); */
+/* @import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@500&display=swap"); */
+/* @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400&display=swap'); */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
 :root {
     /* Pallate: https://blog.maximeheckel.com/ */
@@ -57,7 +59,7 @@
     --font-family-inter: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
         "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-family-body: var(--font-family-inter);
-    --font-family-heading: "Sarabun", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+    --font-family-heading: "IBM Plex Sans Thai", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
         "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     /* Font Family */
     --paragraph-margin-bottom: 1.2rem;
